--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@500&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Encode Sans Expanded' sans-serif;
+  font-family: 'Encode Sans', sans-serif;
 }
